# diff-gaussian-rasterization

./: .gitignore  CMakeLists.txt  README.md  extension.cpp  rasterize_points.cu  rasterize_points.h  rasterizer_api.cu  rasterizer_api.h  setup.py
cuda_rasterizer/: backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
diff_gaussian_rasterization_ks/: __init__.py
rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterizer.cu  rasterizer.h
